--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
             "jakarta.annotation:jakarta.annotation-api",
             "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
     )
+
+    //thumbnailator
+    implementation 'net.coobird:thumbnailator:0.4.19'
 }
 
 tasks.named('test') {
