--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.show-sql=true
 logging.level.com.zaxxer=info
 
 spring.devtools.restart.enabled=false
+
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+org.kraftenty.upload.path=upload
